better pathing algorithm